--- a/doc/7.1.Building_and_Utilities.md
+++ b/doc/7.1.Building_and_Utilities.md
@@ -99,7 +99,7 @@ implement an allocator for physical pages and enable paging. But the first step
 will be to determine the memory that's available to our kernl. We need a proper
 physical memory map.
 
-Again a bootloader like GRUB would come handy, as it woud provide us with such
+Again a bootloader like GRUB would come handy, as it would provide us with such
 a memory map. Actually we'll just implement memory detection ourselves,
 leveraging a BIOS interrupt: *int 0x15, eax=0xe820*. Actually that's the most
 reliable way to detect memory "on all PCs built since 2002, and on most
@@ -111,7 +111,7 @@ GRUB. The other ones are:
 
 The e820 call must be done in real mode! We can directly reuse the assembly
 code example from Osdev. We'll store the memory map structure into an arbitrary
-address (0x8000) and will later pass that address as an argument to our our
+address (0x8000) and will later pass that address as an argument to our
 kernel. Is this dangerous? We could store it for example into a fixed sized
 global variable. But in practice we'll only need that information once to
 initialize our physical memory allocator.
@@ -177,22 +177,28 @@ process](https://wiki.archlinux.org/title/Cross-compiling_tools_package_guidelin
 
 ## ELF, gdb, QEMU
 
-As explained in the excellent book *Operating Systems from 0 to 1* by Tu Do
-Huang, in the chapter *8.5 Debuggable program on bare metal* [^os0to1], we can
-do a couple of other cool things:
+The excellent book *Operating Systems from 0 to 1* by Tu Do Huang explains in
+the chapter *8.5 Debuggable program on bare metal* [^os0to1], that we should be
+able to do a couple of other cool things:
 
-- we can build our kernel in ELF instead of BINARY and put it after the boot
-  sector onto the floppy image file. We only need to tell our bootloader to
-  jump to the ELF entry point! There are a couple of benefits to that:
-  1. our kernel will now be able to read the symbol table and thus display
+- build our kernel in ELF instead of BINARY and put it after the bootloader
+  onto the floppy image file. We only need to tell our bootloader to jump to
+  the ELF entry point (+18h)! A couple of benefits to that would be:
+  1. our kernel would now be able to read the symbol table and thus display
      symbols in the stack trace `\o/`
-  2. if we additionally build the binary with debug information, we'll be able
-     to debug live!
-- we can also build our bootloader as an ELF file with debug information, then
-  extract the binary with `objcopy` to put onto the first sector of the floppy,
-  but still use the ELF file to debug the bootloader live!
+  2. if we'd additionally build the binary with debug information, then we'd be
+     able to debug live!
+- build our bootloader as an ELF file with debug information, then extract the
+  binary with `objcopy` to put onto the first sector of the floppy, but still
+  use the ELF file to debug the bootloader live!
 
-FIXME TODO
+But, [as explained on SO](https://stackoverflow.com/a/43958334), we can hardly
+load our ELF kernel 1:1 into memory:
+
+> It's the memory layout which is described by the SECTIONS command in your
+> linker file, and the elf file format describes this layout... You need a elf
+> capable loader to load the individual sections into the target locations.
+
 
 
 ## References
