--- a/doc/7.2.Physical_Memory_Management.md
+++ b/doc/7.2.Physical_Memory_Management.md
@@ -1,19 +1,9 @@
 # 7.2 Physical Memory Management
 
-**WIP**
+Understanding and managing physical memory is key to enable virtual memory.
 
-> Many platforms, including x86, use a memory management unit (MMU) to handle
-> translation between the virtual and physical address spaces. [^osdev]
-
-
-> For simplicity, our paging system will only support **pages** of size 4KiB,
-> and the physical memory is divided into **frames** of size
-> 4KiB. [^hux-kernel]
-
-> Our goal after setting up paging is to have the kernel’s virtual address
-> space **identity-mapped** to the beginning of the physical memory and reserve
-> some fixed amount of memory for the kernel heap. The rest of the physical
-> memory will be free frames for mapping user process pages.  [^hux-kernel]
+On bochs or qemu, a [typical memory
+map](https://wiki.osdev.org/Memory_Map_(x86)#Overview) looks like this:
 
 ```
 BIOS-e820: [base=0x0000000000000000 length=0x000000000009f000] type=1 (free)
@@ -24,7 +14,8 @@ BIOS-e820: [base=0x0000000007ff0000 length=0x0000000000010000] type=3 (acpi)
 BIOS-e820: [base=0x00000000fffc0000 length=0x0000000000040000] type=2 (reserved)
 ```
 
-Going back to the detected memory map
+Remember the kernel gets this list from our bootloader. Ideally we would clean
+up that list:
 
 > After getting the list, it may be desirable to: sort the list, combine
 > adjacent ranges of the same type, change any overlapping areas to the most
@@ -33,19 +24,30 @@ Going back to the detected memory map
 See for example [the linux for cleaning up the memory
 map](https://github.com/torvalds/linux/blob/f0e18b03fcafd8344539101f564ae358950ae892/arch/x86/kernel/e820.c#L83)
 
-
 Note also the acpi region is reclaimable, i.e. it can be considered free, as
 long as we don't need the ACPI tables stored there.
 
-For simplicity, we'll only use the region of extended memory above 1MB,
-i.e. starting at 0x100000.
+But for simplicity, we'll only use one memory region: the *extended memory*
+starting at 1MB (0x100000).
 
-Our kernel is loaded to memory address 0x1000, before being copied to high
-memory 0x100000. For now, we load the kernel in a single chunk of maximum
-512*40 bytes, 40 being the number of sectors loaded from disk. We could get the
-size of our kernel from a bootloader like GRUB, which is able to load ELF
-binaries. Or we can simply use our LD script `kernel.lds` to track the offsets
-of our kernel start and end [^nullprog]:
+Our kernel is initially loaded to memory address 0x1000, then copied to high
+memory 0x100000. The reasons we do that are: 1. easier paging mapping as the
+kernel space, code and data, is located in one chunk in a clear location, 2. we
+have to worry less about constrained space if our kernel grows in size.
+
+For now, our bootloader loads the kernel in a single chunk of maximum 512\*40
+bytes, 40 being the number of sectors loaded from disk. Note we currently can't
+load much more than 40 sectors without risking to override our boot_sect code
+in memory: 0x1000+(512\*40)=0x6000, 0x1000+(512\*60)=0x8800. So if our kernel
+grows beyond 40 sectors, we'll just have to copy it chunk by chunk.
+
+The kernel will also need to know its size so it knows what portions of memory
+it can use, for exaple to store its data. We could get the size of our kernel
+from a bootloader like GRUB. Note also that, GRUB being able to load ELF
+binaries, it projects them to the address set by the linker, which typically is
+to extended memory (> 1 MiB) [^sos] [^hux-kernel]. But what we do instead is
+track the offsets of our kernel start and end in our LD script
+`kernel.lds` [^nullprog]:
 
 ```
 /* kernel.lds */
@@ -56,18 +58,16 @@ of our kernel start and end [^nullprog]:
 extern char __k_start, __k_end; // use &__k_end !!
 ```
 
-We now need to decide how we're going to organize memory for:
+At this stage, we need to decide how we're going to organize memory for:
 
 - our kernel's own usage, for example to track memory usage → kernel-reserved
   "kernel heap"
 - free memory for paging, for user processes
 
 It's not unusual that OSes choose to put paging information, like the frame
-bitmap or the page descriptor array, after the end of the loaded kernel. This
-also comes naturally as the kernel is loaded by GRUB to extended memory (> 1
-MiB) [^sos] [^hux-kernel].
+bitmap or the page descriptor array, after the end of the loaded kernel.
 
-We'll also follow that design for now and our memory will look like this:
+We'll also follow that design and our memory will look like this:
 
 | Addr            | Stuff                                                                             |
 |-----------------|-----------------------------------------------------------------------------------|
@@ -97,11 +97,11 @@ We'll also follow that design for now and our memory will look like this:
 | 0x800000        | 6. `KHEAP_MAX_ADDR`                                                               |
 |                 |                                                                                   |
 
-It is critical to understand the physical memory layout, during and after the
-bootloader process, as it's easy to make mistakes in design choices that lead
-to various hard-to-debug issues, like not loading enough of the bootloader or
-the kernel, overriding code region while loading, stack clashing with kernel
-code, etc.
+Again, it is critical to understand the physical memory layout, during and
+after the bootloader process, as it's easy to make mistakes in design choices
+that lead to various hard-to-debug issues, like not loading enough of the
+bootloader or the kernel, overriding code region while loading, stack clashing
+with kernel code, etc.
 
 
 
