--- a/doc/7.3.Virtual_Memory.md
+++ b/doc/7.3.Virtual_Memory.md
@@ -1,8 +1,109 @@
 # 7.3 Virtual Memory
 
-**WIP**
+Our goal for this part is just to enable paging. That is switching on the
+related CPU functionality. Not more. We will exploit that mechanism later when
+we implement processes. Let's dive in.
 
-Identity-mapping the kernel makes address translation for the kernel heap much faster.
+## Address translation
+
+> Many platforms, including x86, use a memory management unit (MMU) to handle
+> translation between the virtual and physical address spaces. [^osdev]
+
+**TLB** (Translation Lookaside Buffer) caches page lookups.
+
+> For simplicity, our paging system will only support **pages** of size 4KiB,
+> and the physical memory is divided into **frames** of size
+> 4KiB. [^hux-kernel]
+
+On x86 the translation from virtual to physical addresses is done via:
+
+- a special register, CR3 aka Page Directory Base Register (PDBR), which stores
+  the physical address of the Page Directory
+- a special data structure, the Page Directory, a table of 1024 32-bit
+  entries (for 4K pages) pointing to Page Tables
+- other very similar data structure, Page Tables, tables of 1024 32-bit
+  entries (for 4K pages) poimting to actual physical frames.
+
+2 important notes on the translation:
+
+1. Translation is a 2-level lookup using the virtual address as follows:
+   ```
+   32-bit VADDR := |31  PDE Index  22|21  PTE Index  12|11  Offset In Page  0|
+   ```
+2. Page Directory and Page Table *entries* are 32-bit and can be considered as
+   physical addresses to Page Tables or frames respectively, except that only
+   the 20 MSBs are used (as LSBs are used as flags). Meaning that addresses
+   must be (4K) page-aligned.
+
+Note how easy we can change the whole memory context! For example for different
+processes. That said when modifying translation tables, we need to remove
+obsolete entries from the TLB. This can be done by either:
+
+- Issuing the `invlpg` instruction to invalidate a page
+- Reloading the `CR3` register to simulate a complete address space switch
+
+## Setup paging
+
+Paging is actually enabled by setting bit 31 of CR0. As soon as paging is
+enabled, all addresses (used in code thus by the CPU) become virtual, and all
+of our memory refrences go through the MMU first!
+
+> Our goal after setting up paging is to have the kernel’s virtual address
+> space **identity-mapped** to the beginning of the physical memory and reserve
+> some fixed amount of memory for the kernel heap. The rest of the physical
+> memory will be free frames for mapping user process pages. [^hux-kernel]
+
+> Identity Mapping is nothing more then mapping a virtual address to the same
+> physical address. For example, virtual address 0x100000 is mapped to physical
+> address 0x100000. Yep--Thats all there is to it. The only real time this is
+> required is when first setting up paging. It helps insure the memory
+> addresses of your current running code of where they are at stays the same
+> when paging is enabled. Not doing this will result in immediate triple
+> fault. You will see an example of this in our Virtual Memory Manager
+> initialization routine. [^brokenthorn]
+
+Identity-mapping the kernel is convenient as we enable pagination: the physical
+addresses before are mapped to linear addresses afterwards.
+
+Identity-mapping the kernel makes address translation for the kernel heap much
+faster [???Really???Why]
+
+Quick question: if physical address space is 2^32 = 4 GiB, and paging deals
+with a virtual space of 1024 (page directory entries) * 1024 (page table
+entries = frames) * 4096 (page size) = 4 GiB, **how precisely does paging
+provide a wider virtual address space**? Well for one *each process* can
+virtually access 4 GiB. Also the address space can be extended to disk pages,
+aka **swapping**.
+
+## Higher half kernel
+
+What are higher half kernels?
+
+> How can we allow multiple programs a 4GB address space if we can only have
+> one page directory at a time?  We cant. Not nativly, anyways. Alot of
+> mutitasking operating systems map the high 2 GB address space for its own use
+> as "kernel space" and the low 2 GB as "user space". The user space cannot
+> touch kernel space. With the kernel address space being mapped to every
+> processes 4GB virtual address space, we can simply switch the current page
+> directory without error using the kernel no matter what process is currently
+> running. This is possible due to the kernel always being located at the same
+> place in the processes address space. This also makes scheduling
+> possible. [^brokenthorn]
+
+Why higher half kernels?
+
+> We can very well run our kernel at some lower virtual address. One reason has
+> to do with v86 tasks. If you want to support v86 tasks, v86 tasks can only
+> run in user mode and within the real mode address limits (0xffff:0xffff), or
+> about 1MB+64k linear address. It is also typical to run user mode programs in
+> the first 2GB (or 3GB on some OSs) as software typically never has a need to
+> access high memory locations. [^brokenthorn]
+
+This is just for reference as we won't be using this for now. All we want to do
+for now is enabling paging. To setup a higher half kernel, see:
+
+- https://wiki.osdev.org/Higher_Half_x86_Bare_Bones
+- https://github.com/dreamos82/Osdev-Notes/blob/master/HigherHalf.md
 
 ## References
 
@@ -12,3 +113,4 @@ Identity-mapping the kernel makes address translation for the kernel heap much f
   on [How to build DOS COM files with
   GCC](https://nullprogram.com/blog/2014/12/09/) which made it explicit that we
   need to use the *address* of the linker variable!
+- [^brokenthorn]: [brokenthorn](http://www.brokenthorn.com/Resources/OSDev18.html)
