[WIP] Add malloc-like kernel heap allocator

--- a/doc/7.2.Physical_Memory_Management.md
+++ b/doc/7.2.Physical_Memory_Management.md
@@ -103,6 +103,57 @@ that lead to various hard-to-debug issues, like not loading enough of the
 bootloader or the kernel, overriding code region while loading, stack clashing
 with kernel code, etc.
 
+## Frame map
+
+The duties of physical memory manager will be: 1. keep track of allocated
+frames, 2. allocate chunks of physical memory of arbitrary size for kernel use.
+
+For example we'll use a bitmap to store frame allocation. But we don't know the
+size of the memory before booting so we'll need to dynamically allocate space
+for our frame bitmap.
+
+For the bitmap implementation we'll shamelessly just use one from
+[Stackoverflow](https://stackoverflow.com/a/24753227/421846). One optimization,
+that we won't implement, that would speed up lookups from O(n) to O(1), would
+be to keep track of the last place free space we found.
+
+For the kernel allocator, we can start with a so-called *bump allocator*, aka
+[WaterMark allocator](https://wiki.osdev.org/Memory_Allocation#A_very_very_simple_Memory_Manager),
+which only grows, as
+
+> everything we need to allocate [to setup paging] will never be freed because
+> they are data structures that must exist throughout the kernel's
+> lifetime [^hux-kernel]
+
+We'll follow Hux's path later and implement a proper heap allocator for our
+kernel using a doubly-linked list.
+
+Other projects have different approaches for frame allocation:
+
+- [Hux uses a slab
+  allocator](https://github.com/josehu07/hux-kernel.wiki/blob/master/12.-Aligned-SLAB-Allocators.md)
+  for frame allocation. More on SLAB allocation in a moment
+- sos [^sos] starts straightaway with two doubly-linked lists: free and used
+  frames.
+- xv6 only uses fixed page-size allocation and uses a linked list for free
+  pages threaded through the pages themselves. Note this is slab allocation.
+  It also uses a separate page allocator during entry, which does not support
+  freeing.
+
+## Slab allocation
+
+Similar to object pools but applied to memory:
+
+> When the allocator is asked to free the object's memory, it just adds the
+> slot to the containing slab's list of free (unused) slots [rather than doing
+> the work of destroying it]. The next call to create an object of the same
+> type (or allocate memory of the same size) will return that memory slot (or
+> some other free slot) and remove it from the list of free slots. [^wikipedia]
+
+Can be used in other contexts like inodes.
+
+*Segregated list* is the parent concept. Slab allocateor is a specialization in
+that is keeps free objects on the lists in a pre-initialized state.
 
 
 ## References
@@ -113,3 +164,4 @@ with kernel code, etc.
   on [How to build DOS COM files with
   GCC](https://nullprogram.com/blog/2014/12/09/) which made it explicit that we
   need to use the *address* of the linker variable!
+- [^wikipedia]: [wikipedia](https://en.wikipedia.org/wiki/Slab_allocation)
